--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,36 +1,41 @@
 [package]
-name = "rmge"
-version = "0.1.0"
 authors = ["TerraDOOM <look4totte@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+name = "rmge"
+version = "0.1.0"
 [dependencies]
 arrayvec = "0.5.1"
+byteorder = "*"
 gfx-hal = "0.5.0"
+nalgebra = "0.22"
 raw-window-handle = "0.3"
 take_mut = "0.2"
-nalgebra = "0.22"
+log = "0.4"
+
+[dependencies.gfx-backend-vulkan]
+optional = true
+version = "0.5"
 
 [dev-dependencies]
 shaderc = "0.6"
 winit = "0.22.2"
+simple_logger = "1"
 
 [features]
 default = ["gfx-backend-vulkan"]
-metal = ["gfx-backend-metal"]
 dx12 = ["gfx-backend-dx12"]
+metal = ["gfx-backend-metal"]
 vulkan = ["gfx-backend-vulkan"]
 
-[dependencies.gfx-backend-vulkan]
-version = "0.5"
+[target]
+[target."cfg(target_os = \"macos\")"]
+[target."cfg(target_os = \"macos\")".dependencies]
+[target."cfg(target_os = \"macos\")".dependencies.gfx-backend-metal]
 optional = true
+version = "0.5"
 
-[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
-version = "0.5"
+[target."cfg(windows)"]
+[target."cfg(windows)".dependencies]
+[target."cfg(windows)".dependencies.gfx-backend-dx12]
 optional = true
-
-[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
 version = "0.5"
-optional = true
